--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hub de Links</title>
+    <title>Links</title>
 
     <!-- Bootstrap CSS -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -14,6 +14,10 @@
 
     <!-- Seu CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
+
+
+    <!-- TRADUÇÃO -->
+    <link href="assets/css/translate.css" rel="stylesheet">
 
 
     <!--  TEMA Bootstrap DARK/LIGHT -->
@@ -28,157 +32,147 @@
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            
-            <a class="navbar-brand" href="https://felipegiust.github.io/links/">Felipe Machado Giusti</a>
 
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                </ul>
 
-                <!-- Seletor de Tema Oficial Bootstrap -->
-                <div class="dropdown me-3">
-                    <button class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center"
+    <nav class="navbar bg-body-tertiary fixed-top" style="z-index: 1030;">
+        <div class="container-fluid container">
+            <a class="navbar-brand" href="https://github.com/felipegiust/links">
+                <i class="bi bi-github"></i> Links
+            </a>
+
+            <div class="d-flex">
+                <div class="nav-item dropdown">
+                    <!-- Seletor de Tema -->
+                    <button class="btn btn-secondary py-2 px-0 px-2 dropdown-toggle d-flex align-items-center"
                         id="bd-theme" type="button" aria-expanded="false" data-bs-toggle="dropdown"
                         data-bs-display="static" aria-label="Toggle theme (auto)">
 
                         <!-- Ícones controlados por CSS -->
                         <span class="theme-icon-active">
-                            <svg class="bi theme-icon-light" width="16" height="16">
-                                <use href="#sun-fill"></use>
-                            </svg>
-                            <svg class="bi theme-icon-dark" width="16" height="16">
-                                <use href="#moon-stars-fill"></use>
-                            </svg>
-                            <svg class="bi theme-icon-auto" width="16" height="16">
-                                <use href="#circle-half"></use>
-                            </svg>
+                            <i class="bi bi-sun-fill theme-icon-light"></i>
+                            <i class="bi bi-moon-stars-fill theme-icon-dark"></i>
+                            <i class="bi bi-circle-half theme-icon-auto"></i>
                         </span>
 
-                        <span class="d-lg-none ms-2" id="bd-theme-text">Toggle theme</span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-theme">
                         <li>
-                            <button type="button" class="dropdown-item d-flex align-items-center"
+                            <button type="button" class="btn-secondary dropdown-item d-flex align-items-center"
                                 data-bs-theme-value="light" aria-pressed="false">
-                                <svg class="bi me-2 opacity-50" width="16" height="16">
-                                    <use href="#sun-fill"></use>
-                                </svg>
+                                <i class="bi bi-sun-fill me-2 opacity-50"></i>
                                 Claro
-                                <svg class="bi ms-auto d-none" width="16" height="16">
-                                    <use href="#check2"></use>
-                                </svg>
+                                <i class="bi bi-check2 ms-auto d-none"></i>
                             </button>
                         </li>
                         <li>
-                            <button type="button" class="dropdown-item d-flex align-items-center"
+                            <button type="button" class="btn-secondary dropdown-item d-flex align-items-center"
                                 data-bs-theme-value="dark" aria-pressed="false">
-                                <svg class="bi me-2 opacity-50" width="16" height="16">
-                                    <use href="#moon-stars-fill"></use>
-                                </svg>
+                                <i class="bi bi-moon-stars-fill me-2 opacity-50"></i>
                                 Escuro
-                                <svg class="bi ms-auto d-none" width="16" height="16">
-                                    <use href="#check2"></use>
-                                </svg>
+                                <i class="bi bi-check2 ms-auto d-none"></i>
                             </button>
                         </li>
                         <li>
-                            <button type="button" class="dropdown-item d-flex align-items-center active"
+                            <button type="button" class="btn-secondary dropdown-item d-flex align-items-center active"
                                 data-bs-theme-value="auto" aria-pressed="true">
-                                <svg class="bi me-2 opacity-50" width="16" height="16">
-                                    <use href="#circle-half"></use>
-                                </svg>
+                                <i class="bi bi-circle-half me-2 opacity-50"></i>
                                 Automático
-                                <svg class="bi ms-auto d-none" width="16" height="16">
-                                    <use href="#check2"></use>
-                                </svg>
+                                <i class="bi bi-check2 ms-auto d-none"></i>
                             </button>
                         </li>
                     </ul>
                 </div>
 
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                <div class="py-2 px-2">
+                    |
+                </div>
+
+
+                <!-- tradução seleciona -->
+                <div class="nav-item dropdown">
+                    <button class="btn btn-secondary py-2 px-2 dropdown-toggle d-flex align-items-center" type="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-translate"></i>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end" id='ATLang_list'>
+                        <li><button class="language-list dropdown-item" data-google-lang='pt'>Português</button></li>
+                        <li><button class="language-list dropdown-item" data-google-lang='en'>English</button></li>
+                        <li><button class="language-list dropdown-item" data-google-lang='es'>Español</button></li>
+                        <li><button class="language-list dropdown-item" data-google-lang='fr'>Français</button></li>
+                        <li><button class="language-list dropdown-item" data-google-lang='de'>Deutsch</button></li>
+                        <li><button class="language-list dropdown-item" data-google-lang='it'>Italiano</button></li>
+                        <li><button class="language-list dropdown-item" data-google-lang='zh'>中文</button></li>
+                        <li><button class="language-list dropdown-item" data-google-lang='ja'>日本語</button></li>
+                    </ul>
+                </div>
+
+
+                <div class="py-2 px-2">
+                    |
+                </div>
+
+
+                <button type="button" class="btn btn-secondary">
+                    <i class="bi bi-bell-fill"></i>
+                </button>
+
+
+                <div class="py-2 px-2">
+                    |
+                </div>
+
+                <!-- Botão menu -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+
+
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
+
+
+
+
+    <!-- Navbar -->
+
 
     <!-- Conteúdo Principal -->
     <div class="container mt-4">
         <div class="row">
             <div class="col-12">
-                <h1>Bem-vindo ao Hub de Links</h1>
-                <p>Conteúdo do seu site aqui...</p>
 
-                <!-- Cards de exemplo -->
-                <div class="card mb-3 theme-demo">
-                    <div class="card-body">
-                        <h5 class="card-title">Card Example</h5>
-                        <p class="card-text">Este card vai mudar de cor automaticamente com o tema.</p>
-                    </div>
-                </div>
-
-                <!-- Área de demonstração do tema -->
-                <div class="custom-section bg-body-secondary theme-demo">
-                    <h3>Seção Personalizada</h3>
-                    <p>Esta seção também muda de cor com o tema graças às classes do Bootstrap.</p>
-                </div>
             </div>
         </div>
     </div>
 
-    <!-- SVG para os ícones do tema -->
-    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-        <symbol id="check2" viewBox="0 0 16 16">
-            <path
-                d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
-        </symbol>
-        <symbol id="circle-half" viewBox="0 0 16 16">
-            <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
-        </symbol>
-        <symbol id="moon-stars-fill" viewBox="0 0 16 16">
-            <path
-                d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
-            <path
-                d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
-        </symbol>
-        <symbol id="sun-fill" viewBox="0 0 16 16">
-            <path
-                d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
-        </symbol>
-    </svg>
 
 
+    <!-- Tradução -->
+    <script src="assets/js/translate.js"></script>
+    <script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <!-- Bootstrap JS -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
